--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -72,7 +72,7 @@
 <p>2 days ago ... Information Privacy Analyst. Boulder, CO. Administration. Full-time. Submit your 
 application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/goldstonepartners/743999697312169-information-privacy-analyst'>Goldstone Partners, Inc. Information Privacy Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/goldstonepartners/743999697312169-information-privacy-analyst'>Goldstone Partners, Inc. Information Privacy Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -112,7 +112,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Verisk/743999696786128-data-security-and-privacy-specialist'>Verisk Data Security and Privacy Specialist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Verisk/743999696786128-data-security-and-privacy-specialist'>Verisk Data Security and Privacy Specialist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -170,7 +170,7 @@ experience?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999695244555-privacy-and-data-governance-analyst'>ClientSolv Technologies Privacy and Data Governance Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999695244555-privacy-and-data-governance-analyst'>ClientSolv Technologies Privacy and Data Governance Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-16</p>
 <hr/>
@@ -184,7 +184,7 @@ experience?...</p>
 compliance solutions that tens of thousands of organizations worldwide rely on to 
 trust?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PrimastepLLC/743999694425919-privacy-security-risk-analyst'>Primastep LLC Privacy / Security Risk Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PrimastepLLC/743999694425919-privacy-security-risk-analyst'>Primastep LLC Privacy / Security Risk Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -234,7 +234,7 @@ privacy?...</p>
 Privacy Office based in Cork, Ireland. You would work directly with the European
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://landolakes.wd1.myworkdayjobs.com/en-US/LandOLakes/job/Arden-Hills-MN-USA/Data-Privacy-Compliance-Specialist_R-8434'>Data Privacy Compliance Specialist</a></h5> 
+<h5><a href='https://landolakes.wd1.myworkdayjobs.com/en-US/LandOLakes/job/Arden-Hills-MN-USA/Data-Privacy-Compliance-Specialist_R-8434'>Data Privacy Compliance Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 14, 2019 ... programs and services. The Data Privacy/Compliance Specialist will be 
 responsible for facilitating the development and implementation of a data privacy 
@@ -294,7 +294,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-05</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/reachire/57ca88ba-f6b2-4cc5-859b-83113340ee7c'>reacHIRE - Fidelity Investments - Privacy Compliance Analyst (Return-to-Work Program)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/reachire/57ca88ba-f6b2-4cc5-859b-83113340ee7c'>reacHIRE - Fidelity Investments - Privacy Compliance Analyst (Return-to-Work Program)</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -330,7 +330,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-13</p>
 <hr/>
-<h5><a href='https://frb.referrals.selectminds.com/jobs/data-privacy-associate-new-jersey-location-8984'>Data Privacy Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/data-privacy-associate-new-jersey-location-8984'>Data Privacy Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-11</p>
 <hr/>
@@ -370,7 +370,7 @@ learning,?...</p>
 <p>2 days ago ... The Associate Privacy Analyst provides administrative and analytical support to 
 Prime's privacy program, working closely with privacy team members as well as?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/data-privacy-associate-new-jersey-location-8900'>Data Privacy Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
+<h5><a href='https://frb.referrals.selectminds.com/jobs/data-privacy-associate-new-jersey-location-8900'>Data Privacy Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-18</p>
 <hr/>
