--- a/ux.html
+++ b/ux.html
@@ -41,8 +41,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oXJVafwv&__jvst=Employee+Referral&__jvsd=sNYIIhwX&__jvsc=Twitter&bid=nMk5nMwP'>NICE Careers - UX Expert</a></h5> 
+<p><span class="badge badge-light">Raanana, Israel</span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
 <h5><a href='https://careers.jobscore.com/careers/dae/jobs/system-admin-mid-linux-dsnS6s90Kr6zXbaKjNoogA'>System Admin - Mid - LINUX #0584 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/nstar-financial/job/opDrbfwo'>Orion Advisor Solutions Careers - UI/UX Designer</a></h5> 
@@ -53,7 +57,7 @@
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/25156-UX-Designer?source=feed'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/25156-UX-Designer?source=feed'>
       UX Designer at NovoEd - 854 Folsom St, San Francisco, CA 94107 - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
@@ -71,7 +75,7 @@
 <p><span class="badge badge-light">San Antonio, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://instamotion.join.com/jobs/468820-senior-ux-manager-w-m-d'>Job @ InstaMotion Retail (M?nchen): (Senior) UX Ma... | JOIN</a></h5> 
+<h5><a href='https://instamotion.join.com/jobs/468820-senior-ux-manager-w-m-d'>Job @ InstaMotion Retail (M?nchen): (Senior) UX Ma... | JOIN</a></h5> 
 <p><span class="badge badge-light">M?nchen M?nchen, Deutschland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -155,7 +159,7 @@
 <p><span class="badge badge-light">Chiasso, Switzerland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.travelweekly.co.uk/job/172594/luxury-travel-consultant/?TrackID=174884'>LUXURY TRAVEL CONSULTANT job with C&amp;M Travel Recruitment Ltd | 172594</a></h5> 
+<h5><a href='https://jobs.travelweekly.co.uk/job/172594/luxury-travel-consultant/?TrackID=174884'>LUXURY TRAVEL CONSULTANT job with C&amp;M Travel Recruitment Ltd | 172594</a></h5> 
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -205,7 +209,7 @@
 <p><span class="badge badge-light">Hamburg Hamburg</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://ontheshortlist.zohorecruit.com/recruit/ViewJob.na?digest=OMxI@vOMIjkz5CDtFyJpJcBdio.pCanMiyrTEJpQk3w-&embedsource=Twitter'>Junior UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ontheshortlist.zohorecruit.com/recruit/ViewJob.na?digest=OMxI@vOMIjkz5CDtFyJpJcBdio.pCanMiyrTEJpQk3w-&embedsource=Twitter'>Junior UX Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -225,7 +229,7 @@
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/StoqoTechnologies/743999698348956-ui-ux-designer-designer-lead-'>Stoqo Technologies UI/UX Designer (Designer / Lead) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/StoqoTechnologies/743999698348956-ui-ux-designer-designer-lead-'>Stoqo Technologies UI/UX Designer (Designer / Lead) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta Selatan, Indonesia  Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -233,7 +237,7 @@
 <p><span class="badge badge-light">London London  London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://holycodedoo.applytojob.com/apply/tPf1i9A4j0/Mobile-UXUI-Designer-Smallpdf-Team'>Mobile UX/UI designer - Smallpdf team - Holycode - Career Page</a></h5> 
+<h5><a href='http://holycodedoo.applytojob.com/apply/tPf1i9A4j0/Mobile-UXUI-Designer-Smallpdf-Team'>Mobile UX/UI designer - Smallpdf team - Holycode - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -291,7 +295,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://join.join.com/jobs/462089-senior-ux-designer'>Job @ JOIN Solutions (Berlin): Senior UX Designer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://join.join.com/jobs/462089-senior-ux-designer'>Job @ JOIN Solutions (Berlin): Senior UX Designer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -379,7 +383,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qda9Vfwb&k=Job&j=oXAqbfwS&__jvst=Employee&__jvsd=skPaJgwN&__jvsc=Twitter&bid=npORlMwG'>SugarCRM Careers - Senior UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qda9Vfwb&k=Job&j=oXAqbfwS&__jvst=Employee&__jvsd=skPaJgwN&__jvsc=Twitter&bid=npORlMwG'>SugarCRM Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">Cupertino California  North Carolina  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -403,7 +407,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24891-UX-Designer?source=twitter'>
+<h5><a href='https://dribbble.com/jobs/24891-UX-Designer?source=twitter'>
       UX Designer at Numbrs Personal Finance AG - Zurich, Switzerland - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">Zurich, Switzerland</span></p>
@@ -427,7 +431,7 @@
 <p><span class="badge badge-light">Zurich, Switzerland</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=twitter'>
+<h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=twitter'>
       Product designer (UX/UI) at Beeline - London, UK - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">London</span></p>
@@ -441,7 +445,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=feed'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=feed'>
       Product designer (UX/UI) at Beeline - London, UK - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">London</span></p>
@@ -466,10 +470,6 @@
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qda9Vfwb&k=Job&j=oXAqbfwS&__jvst=Employee&__jvsd=ssgrhfwa&__jvsc=Twitter&bid=nYSHlMw9'>SugarCRM Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">Cupertino California  North Carolina  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698251976-ux-designer-uplay-'>Ubisoft UX Designer (Uplay) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Chengdu, Sichuan</span></p>
-<p>Posted on: 2019-10-27</p>
 <hr/>
 
 
